deployment/mailu/medok-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: medok
spec:
    selector:
        matchLabels:
            app: medok
    replicas: 1
    template:
        metadata:
            labels:
                app: medok
        spec:
            serviceAccountName: medok
            containers:
            - name: medok
              image: soltesza/medok:1.0.0-SNAPSHOT
