deployment/mailu/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ${MAILU_APP_NAME}
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/rewrite-target: /
        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
        # certmanager.k8s.io/cluster-issuer: 'letsencrypt-http01'

        # Allowing the Mailu client to upload bigger chunks than usual
        nginx.ingress.kubernetes.io/proxy-body-size: 512m
    labels:
        app: ${MAILU_APP_NAME}
spec:
    tls:
        - secretName: ${MAILU_TLS_SECRET_NAME}
          hosts:
              - ${MAILU_FQN}
    rules:
        - host: ${MAILU_FQN}
          http:
              paths:
                  - path: /
                    backend:
                        serviceName: ${MAILU_APP_NAME}-front
                        servicePort: 80
